# internship-qc

./: .gitignore  CMakeLists.txt  README.md
circuits/: one_two_three.qasm
graph/: graph1.txt  graph2.txt
include/coupling-graph/: graph.h
include/main-mapping/: mainmapping.h
include/write-qasm/: write_qasm.h
output/: new_4gt4-v0_72.qasm  new_alu-bdd_288.qasm  new_alu-v0_27.qasm  new_asdf.qasm  new_cm152a_212.qasm  new_cm42a_207.qasm  new_cnt3-5_180.qasm  new_dc1_220.qasm  new_graycode6_47.qasm  new_sym10_262.qasm  new_wim_266.qasm  new_xor5_254.qasm
src/: main.cpp  test_graph.cpp
src/coupling-graph/: graph.cpp
src/main-mapping/: mainmapping.cpp
src/write-qasm/: write_qasm.cpp
tools/: qelib1.inc  run.py
